# data-flow-gui

./: .gitignore  CMakeLists.txt  README.wiki  configure.txt
doc/: schema.odg
src/: DataFlowApp.cc  DataFlowApp.h  MainController.cc  MainController.h  MainView.cc  MainView.h  Reflection_input.cc  Reflection_output.cc.h  config.xml  main.cc  tools.xml
src/clutter/: iw_circle.c  iw_circle.h  iw_circular_node.c  iw_circular_node.h  iw_line.c  iw_line.h
src/config/: DfDimensionRestoreDatabase.cc  DfDimensionRestoreDatabase.h  UserConfig.cc  UserConfig.h
src/connectivity/: AbstractDevice.cc  AbstractDevice.h  BleDevice.cc  BleDevice.h  BleTransport.cc  BleTransport.h  DeviceRepository.cc  DeviceRepository.h  IDevice.h  ITransport.h  LocalTransport.cc  LocalTransport.h
src/customNode/: ConsoleNode.cc  ConsoleNode.h  DisplayNode.cc  DisplayNode.h
src/file/: IDataFile.h  NativeXmlFormat.cc  NativeXmlFormat.h  NativeXmlFormatLoad.cc  NativeXmlFormatLoad.h  NativeXmlFormatSave.cc  NativeXmlFormatSave.h
src/geometry/: Geometry.cc  Geometry.h
src/gui/about/: about.xml  aboutView.ui
src/gui/addNode/: AddNodeController.cc  AddNodeController.h  AddNodeTableFilterMapping.cc  addNode.xml  addNodeView.ui
src/gui/console/: ConsoleBuffer.cc  ConsoleBuffer.h  ConsoleController.cc  ConsoleController.h  ConsoleView.cc  ConsoleView.h  console.xml  consoleView.ui
src/gui/drawing/: ContainerFactoryStrategy.cc  ContainerFactoryStrategy.h  DashedCircleStrategy.cc  DashedCircleStrategy.h  DashedLineConnectorStrategy.cc  DashedLineConnectorStrategy.h  DashedLineStrategy.cc  DashedLineStrategy.h  Event.h  IDrawStrategy.cc  IDrawStrategy.h  IDrawingEventHandler.h  IFactoryStrategy.h  ISelectorStrategy.h  MainController.cc  MainController.h  MainView.cc  MoveStrategy.cc  MoveStrategy.h  RectangularSelectorStrategy.cc  RectangularSelectorStrategy.h  ShapeDrawStrategy.cc  ShapeDrawStrategy.h
src/gui/loadFile/: loadFileView.ui
src/gui/main/: ContainerFactoryStrategy.cc  DashedLineConnectorStrategy.cc  DashedLineConnectorStrategy.h  DashedLineStrategy.cc  DashedLineStrategy.h  Event.cc  Event.h  IDrawStrategy.h  IFactoryStrategy.cc  IFactoryStrategy.h  MainController.cc  MainController.h  MainView.cc  MainView.h  MoveStrategy.cc  MoveStrategy.h  RectangularSelectorStrategy.cc  RectangularSelectorStrategy.h  ShapeDrawStrategy.cc  ShapeDrawStrategy.h  Tool.cc  Tool.h  main.xml  mainView.ui
src/gui/properties/: DoubleToFloatEditor.h  PropertiesController.cc  PropertiesController.h  abstractActorPropertiesView.ui  properties.xml
src/gui/saveLoadFile/: IDataFileLoad.h  IDataFileSave.h  NativeXmlFormatLoad.cc  NativeXmlFormatLoad.h  NativeXmlFormatSave.cc  NativeXmlFormatSave.h  OpenFileController.cc  OpenFileController.h  SaveFileController.cc  SaveFileController.h  openFile.xml  openFileView.ui  saveFileView.ui
src/mapping/: ColorMapping.cc  ColorMapping.h
src/model/: DFNode.cc  DFNode.h  IDFNode.h
src/primitives/: Color.cc  Color.h  Direction.cc  Direction.h  Geometry.cc  Geometry.h  Line.cc  Line.h  PrimitiveOperations.cc  PrimitiveOperations.h  Ray.cc  Ray.h
src/view/: AbstractActor.cc  AbstractActor.h  AbstractArcView.cc  AbstractArcView.h  AbstractConnectable.cc  AbstractConnectable.h  AbstractConnector.cc  AbstractConnector.h  AbstractNodeView.cc  AbstractNodeView.h  Anchor.cc  Anchor.h  Button.cc  Button.h  Circle.cc  Circle.h  CircularNode.cc  CircularNode.h  Connector.cc  Connector.h  ConnectorActor.cc  ConnectorActor.h  Ellipse.cc  Ellipse.h  FlowDiagram.cc  FlowDiagram.h  IArcView.h  IClutterActor.h  IConnectable.h  IConnector.h  INodeView.h  Line.cc  Line.h  LineConnector.cc  LineConnector.h  NodeActor.cc  NodeActor.h  Port.cc  Port.h  Rectangle.cc  (+12 more)
src/view/clutter/: ConnectorSolver.cc  ConnectorSolver.h  connectorSolver_c.h  drawing_stuff.c  drawing_stuff.h  iw_abstract_node.c  iw_abstract_node.h  iw_actor.c  iw_actor.h  iw_button.c  iw_button.h  iw_circle.c  iw_circle.h  iw_circular_node.c  iw_circular_node.h  iw_connector.c  iw_connector.h  iw_ellipse.c  iw_ellipse.h  iw_line.c  iw_line.h  iw_line_connector.c  iw_line_connector.h  iw_rectangle.c  iw_rectangle.h  iw_simple_display.c  iw_simple_display.h
src/view/routable/: AbstractRoutable.cc  AbstractRoutable.h  ConnectorRoutable.cc  ConnectorRoutable.h  IRoutable.h  NodeRoutable.h  ObstacleRoutable.h  RoutablePin.cc  RoutablePin.h  RoutableRoot.cc  RoutableRoot.h
ui/: main-palette.ui  main-palette2.ui  main.ui
